# CUDA-CapsuleNetwork-Methods

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindArmadillo.cmake  FindPOSTGRES.cmake  FindPQXX.cmake
cmds/: get_losses.sh  run_best_chromosome_hardwired.sh  run_ga_hpcvis3.sh
data/: nn-evolution.xlsx
include/: ActivationType.h  CUDAClionHelper.h  CUDAUtils.h  CapsNetConfig.h  Config.h  DeviceTimer.h  GAConfig.h  HostTimer.h  ILayer.h  Image.h  MNISTReader.h  MultilayerPerceptron.h  Perceptron.h  ProgressBar.h  Utils.h  book.h
include/CapsuleNetwork/: Capsule.h  CapsuleLayer.h  CapsuleNetwork.h
include/ConvolutionalNetwork/: ConvolutionalLayer.h  ConvolutionalNetwork.h  ICNLayer.h  PoolingLayer.h
include/Datasets/: DataReader.h  MNISTReader.h  SmallNORBReader.h
include/GA/: CapsNetDAO.h  GA.h  Individual.h  Population.h
include/MultilayerPerceptron/: FullyConnectedLayer.h  MultilayerPerceptron.h  Perceptron.h  PerceptronLayer.h
include/argh/: argh.h
include/models/: ActivationType.h  CUUnifiedBlob.h  FeatureMap.h  Filter.h  Image.h  PoolingType.h  PopulationStats.h  VectorActivationType.h  VectorMap.h
run_temp/: temp
slurm/: cs_791z_paper.out  run.py
src/: CUDAUtils.cu  CapsNetConfig.cpp  Config.cpp  DeviceTimer.cu  HostTimer.cpp  ILayer.cpp  Image.cpp  MNISTReader.cpp  MultilayerPerceptron.cpp  Perceptron.cpp  PerceptronLayer.cpp  ProgressBar.cpp  Utils.cpp  main.cpp  main.cu
src/CapsuleNetwork/: Capsule.cpp  CapsuleLayer.cpp  CapsuleNetwork.cpp
src/ConvolutionalNetwork/: ConvolutionalLayer.cpp  ConvolutionalNetwork.cpp  ICNLayer.cpp  PoolingLayer.cpp
src/Datasets/: DataReader.cpp  MNISTReader.cpp  SmallNORBReader.cpp
src/GA/: CapsNetDAO.cpp  GA.cu  Individual.cu  Population.cu
src/MultilayerPerceptron/: FullyConnectedLayer.cpp  MultilayerPerceptron.cpp  Perceptron.cpp  PerceptronLayer.cpp
src/models/: CUUnifiedBlob.cu  FeatureMap.cpp  Filter.cpp  Image.cpp  PopulationStats.cpp  (+1 more)
(+6 files in other folders)
